--- a/ProyectoIntegrador_FlorenciaAndrada/Frontend/src/index.html
+++ b/ProyectoIntegrador_FlorenciaAndrada/Frontend/src/index.html
@@ -6,9 +6,13 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h2>Bienvenidos</h2>
     <app-root></app-root>
   </body>
 </html>
